--- a/notebooks/Mentor_Mentee.ipynb
+++ b/notebooks/Mentor_Mentee.ipynb
@@ -18,7 +18,9 @@
    "source": [
     "import sys, pandas as pd\n",
     "print(\"python:\", sys.executable)\n",
-    "print(\"pandas:\", pd.__version__)\n"
+    "print(\"pandas:\", pd.__version__)\n",
+    "\n",
+    "#7:51"
    ]
   },
   {
